--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
 djangorestframework-simplejwt
-django-filter
+django-filter==21.1
+#importlib-metadata==4.13.0
