--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,5 @@ PyJWT==2.1.0
 pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
-djangorestframework-simplejwt
 django-filter==21.1
-#importlib-metadata==4.13.0
+djangorestframework-simplejwt==5.2.1
